--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -92,7 +92,10 @@ body {
     }
     
   }
+
+  
 }
+
 
 .statsBlocks {
   margin: 90px auto 0 auto;
@@ -131,22 +134,36 @@ body {
 
 @media (max-width: 678px) {
   .mainText {
-    margin-top: 70px;
-    max-width: 86%;
+    margin-top: 45px;
+    max-width: 80%;
+    font-size: 17px;
   }
 
   .inputField {
-     
+    margin-top: 40px;
+   
     input {
-      max-width: 160px;
+      width: 40vh;
+      min-width: 70px;
+      max-width: 370px;
       height: 35px;
     }
 
     button {
       width: 50px;
       height: 48px;
-
-      
     }
   }
+
+  .statsBlocks {
+    margin-top: 50px;
+
+    .statsBlock {
+      max-height: 60px;
+    }
+
+  }
+
+  
+  
 }
