--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -120,7 +120,7 @@ body {
     background: linear-gradient(135deg, #ffffff00, #fb7cff6b); 
     border: 1px solid white;
     border-radius: 14px;
-    width: 250px;
+    width: 260px;
     height: 70px;
     text-align: left;
     padding: 35px 26px;
@@ -166,10 +166,8 @@ body {
 
     .statsBlock {
       max-height: 60px;
+      width: 70vw;
     }
 
-  }
-
-  
-  
+  } 
 }
