--- a/src/components/AddressInfo/AddressInfo.module.scss
+++ b/src/components/AddressInfo/AddressInfo.module.scss
@@ -14,3 +14,9 @@ $bg-color: linear-gradient(135deg, rgba(159, 60, 201, 0.92) 9%, rgb(126, 79, 192
     max-width: 1500px;
     padding: 10px;
 }
+
+@media (max-width: 768px) {
+    .blockInfo {
+        padding: 2px;
+    }
+}
