--- a/src/components/AddressInfo/ContractTypesComponents/Wallet/Wallet.module.scss
+++ b/src/components/AddressInfo/ContractTypesComponents/Wallet/Wallet.module.scss
@@ -1,87 +1,8 @@
-.contractInfo {
-    display: flex;
-    flex-direction: column;
+.interfaceBlock {
+    padding: 15px;
     text-align: left;
-    padding: 15px; 
-    gap: 7px; 
 
-    .fullAddress {
-        display: inline; 
-    }
-
-    .shortAddress {
-        display: none; 
-    }
-
-    @media (max-width: 768px) {
-        .fullAddress {
-            display: none;
-        }
-
-        .shortAddress {
-            display: inline; 
-        }
-    }
-
-    h2 {
-        font-size: clamp(13px, 4vw, 24px);
-
-        span {
-            font-size: clamp(13px, 4vw, 24px);
-            font-weight: 400;
-        }
-
-    }
-
-    .additionalInfo {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 17px;
-
-        h3 {
-            font-size: clamp(14px, 3vw, 20px);
-            margin-bottom: 0px;
-            padding: 0; 
-        }
-
-        a {
-            text-decoration: none;
-            font-size: clamp(14px, 3vw, 20px); 
-        }
-    }
-
-    .linksExplorers {
-        margin-left: 0px;
-    }
-
-
-    .linksExplorers a {
-        margin-right: 5px; 
-        
-    }
-    
-    .linksExplorers a:last-child {
-        margin-left: 5px; 
-        
+    .test {
+        margin: 0;     
     }
 }
-
-.contractInfo > * {
-    margin: 0; 
-}
-
-.address {
-    display: flex;
-    flex-direction: row;
-
-    span {
-        margin-left: 6px;
-    }
-}
-
-.rawAddress {
-    display: flex;
-    align-items: center;
-}
-
